Bug 257804 - mail indexing: invalid dates are not caught
Summary: mail indexing: invalid dates are not caught
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Nepomuk Feeder Agents (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Koenig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-24 18:26 UTC by Will Stephenson
Modified: 2010-11-25 22:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
indexed mail (1.77 KB, application/octet-stream)
2010-11-24 18:26 UTC, Will Stephenson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2010-11-24 18:26:30 UTC
Created attachment 53699 [details]
indexed mail

Version:           unspecified
OS:                Linux

The attached, apparently valid, mail is displayed with an Unknown date.

In addition, the email feeder attempts to index the unknown date value, giving an error from Virtuoso. .This probably means that the indexer isn't aware the insert failed, so the indexed data may be incomplete or inconsistent.

Nepomuk/Virtuoso output:
[/usr/bin/nepomukservicestub] "/usr/bin/nepomukservicestub(31493)" Soprano: "SQLExecDirect failed on query 'sparql insert into graph <urn:nepomuk:local:ce2333bd-b888-4eb6-ac3a-81377019fa16> { <akonadi:?item=1143> <http://www.semanticdesktop.org/ontologies/2007/03/22/nmo#sentDate> "-4713-01-01TZ"^^<http://www.w3.org/2001/XMLSchema#dateTime> . }' (iODBC Error: [OpenLink][Virtuoso iODBC Driver][Virtuoso Server]SQ074: Line 1: DT006: Cannot convert -4713-01-01TZ to datetime : Incorrect month field length)"


Reproducible: Didn't try
Comment 1 Tobias Koenig 2010-11-25 22:35:31 UTC
SVN commit 1200812 by tokoe:

Check if the date passed to Nepomuk is valid.

BUG: 257804


 M  +3 -1      messageanalyzer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1200812