Check if the date passed to Nepomuk is valid.

BUG: 257804

svn path=/trunk/KDE/kdepim/nepomuk_email_feeder/; revision=1200812